Changes for 3.0.0alpha5

New features:

Bug fixes:
..F....... [ZBX-9992] fixed forecast() function info index for trigger expression constructor (gleb)
.......PS. [ZBX-10061] fixed possible server and proxy crash on attempt to clean up text cache if log item meta update packets are present in history cache (gleb)
...G...... [ZBX-10045] fixed first proc.cpu.util[] request returning empty value which was treated as network error by server (wiper)
.......PS. [ZBX-1916] improved host availability handling by resetting it for disabled hosts, interfaces without enabled items and hosts monitored by offline proxies (wiper)

--------------------------------------------------------------------------------
Changes for 3.0.0alpha4

New features:
..F....... [ZBX-9985] fixed template search results (vitalijs)
..F....... [ZBXNEXT-1762] added years, months and half of months periods displaying on graphs X axis (Oleg)
A.F....... [ZBXNEXT-1679] implemented value map import/export (Ivo)
..F....... [ZBXNEXT-1679] added checkbox column in value map list view and bulk "Delete" button (Ivo)
..F....... [ZBXNEXT-1679] added "Used in items" column in value map list view and green text "Yes" if value map is used in items or item prototypes (Ivo, Sasha)
..F....... [ZBXNEXT-1679] added value map sorting by name (Ivo)
..F....... [ZBXNEXT-1679] added limit for the amount of records and paging in value maps (Ivo)
..F....... [ZBXNEXT-1679] replaced built-in confirmation dialog with modal window dialog for image import when selecting "Update existing" (Ivo)
A.F....PS. [ZBXNEXT-2683] added user macro context (Ivo, Oleg, Sasha, wiper)
..F....... [ZBX-2616] updated bundled DejaVu font from 2.34 to 2.35 (Richlv)
A......... [ZBX-9935] added check for item delay, to be between 0 and 86400 seconds (vitalijs)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Finnish, Japanese, Polish, Russian and Slovak translations; thanks to Zabbix translators (Richlv)